<resources>
    <string name="app_name">MyCareer</string>

    <!-- buttons -->
    <string name="button_get_into">Ingresar</string>
    <string name="button_complete_registry">Completar registro</string>
    <string name="button_login">Inicia sesión</string>
    <string name="button_registry">Regístrate</string>
    <string name="button_take_survey">Iniciar cuestionario</string>
    <string name="button_take_again_survey">Realizar nuevamente</string>
    <string name="button_logout">Cerrar sesión</string>
    <string name="button_home">Ir al inicio</string>
    <string name="button_next">Siguiente pregunta</string>
    <string name="button_before">Anterior</string>
    <string name="button_view_results">Ver resultados</string>

    <!-- labels -->
    <string name="label_without_user">¿Aún no tienes usuario?</string>
    <string name="label_has_user">¿Tienes usuario?</string>
    <string name="label_hello">¡Hola!</string>
    <string name="label_start_forms">Puedes empezar llenando uno de estos formularios 👇</string>
    <string name="label_profiling">Perfilamiento</string>
    <string name="label_question_counter">Pregunta %d de %d</string>
    <string name="label_questions_answered">%d de %d respondidas</string>

    <!-- hints -->
    <string name="hint_first_name">Primer nombre</string>
    <string name="hint_second_name">Segundo nombre</string>
    <string name="hint_first_surname">Primer apellido</string>
    <string name="hint_second_surname">Segundo apellido</string>
    <string name="hint_document_type">Tipo de documento</string>
    <string name="hint_document">Documento de identidad</string>
    <string name="hint_birth_date">Fecha de nacimiento</string>
    <string name="hint_country">País</string>
    <string name="hint_department">Departamento</string>
    <string name="hint_municipality">Municipio</string>
    <string name="hint_study_level">Nivel educativo</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_institution_type">Tipo de institución educativa</string>
    <string name="hint_institution">Institución educativa</string>
    <string name="hint_pass_confirm">Confirma tu contraseña</string>

    <!-- content descriptions -->
    <string name="content_description_back_button">Regresar</string>
    <string name="content_description_close_button">Cerrar</string>

    <!-- errors -->
    <string name="error_email">Correo inválido</string>
    <string name="error_password_length">La contraseña tiene que tener al menos %d caracteres</string>
    <string name="error_country">Ingresa un país válido</string>
    <string name="error_department">Ingresa un departamento o país válidop</string>
    <string name="error_municipality">Ingresa un municipio de la lista</string>
    <string name="error_document_type">Ingresa un tipo de documento válido</string>
    <string name="error_study_level">Ingresa un nivel educativo válido</string>
    <string name="error_institution_type">Ingresa un tipo de instutición válido</string>
    <string name="error_first_name">Nombre inválido o vacío</string>
    <string name="error_second_name">Nombre inválido</string>
    <string name="error_first_surname">Primer apellido inválido o vacío</string>
    <string name="error_second_surname">Segundo apellido inválido o vacío</string>
    <string name="error_document">Documento inválido o vacío</string>
    <string name="error_institution_name">Nombre de la institución inválido o vacío</string>
    <string name="error_password_match_length">Las contraseñas deben de ser iguales y tener un mínimo de %d caracteres</string>
    <string name="error_results_not_found">No se encontraron resultados :(</string>
    <string name="error_can_not_retrieve_information">No se pudo obtener información</string>
    <string name="error_questions_and_questions_answers_empty">No hay preguntas para cargar</string>

    <!-- warning messages -->
    <string name="warning_work_in_progress">En proceso de construcción</string>

    <!-- loading messages -->
    <string name="loading_countries">Cargando paises</string>
    <string name="loading_document_types">Cargando tipos de documentos</string>
    <string name="loading_study_levels">Cargando niveles educativos</string>
    <string name="loading_institution_types">Cargando tipos de instituciones</string>
    <string name="loading_user_info">Cargando información del usuario…</string>

    <!-- success messages -->
    <string name="success_registry">¡Registro exitoso! Mira Revisa tu correo: %s</string>
    <string name="success_survey_complete">¡Formulario completado!</string>
</resources>