<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_title_action_button" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_start"
        android:layout_marginEnd="@dimen/content_end"
        android:layout_marginBottom="@dimen/content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/results_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/button_view_results" />

        <Button
            android:id="@+id/before_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/results_button"
            android:layout_alignParentStart="true"
            android:text="@string/button_before" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/results_button"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_toEndOf="@id/before_button"
            android:text="@string/button_next" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:elevation="@dimen/elevation_high"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container">

        <include
            android:id="@+id/error_layout"
            layout="@layout/layout_error" />

    </LinearLayout>

    <TextView
        android:id="@+id/current_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_end"
        app:layout_constraintBottom_toTopOf="@+id/question_fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container"
        app:layout_constraintVertical_bias="0.2"
        tools:text="Pregunta 1 de 10" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/question_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/content_start"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/content_end"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_question_text"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>